/*
 * Copyright 2017, TeamDev Ltd. All rights reserved.
 *
 * Redistribution and use in source and/or binary forms, with or without
 * modification, must retain the above copyright notice and the following
 * disclaimer.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
 * "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
 * LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
 * OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
 * LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 * DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 * THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */

syntax = "proto3";

package javaclasses.exlibris;

import "spine/options.proto";
import "javaclasses/exlibris/values.proto";

option (type_url_prefix) = "type.spine.quickstart";
option java_package = "javaclasses.exlibris";
option java_outer_classname = "ModelProto";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;

import "javaclasses/exlibris/identifiers.proto";
import "google/protobuf/timestamp.proto";

// Defines a state for `Book` aggregate.
//
message Book {

    // An ID of the book.
    //
    BookId book_id = 1;

    // A bookâ€™s details.
    //
    BookDetails book_details = 2;
}

//Defines a state for `Inventory` aggregate.
//
message Inventory {

    InventoryId inventory_id = 1;
    BookId book_id = 2;
    repeated InventoryItem inventory_items = 3;
    repeated Reservation reservations = 4;
    repeated LoanId loans = 5;
}

message InventoryItem {

    InventoryItemId inventory_item_id = 1;
    oneof item_status {
        bool in_library = 2;
        bool borrowed = 3;
        bool lost = 4;
    }
    UserId user_id = 5;
}

message Reservation {

    BookId book_id = 1;
    UserId who_reserved = 2;
    google.protobuf.Timestamp when_created = 3;
}

message Loan {

    LoanId loan_id = 1;
    InventoryItemId inventory_item_id = 2;
    UserId user_id = 3;
    google.protobuf.Timestamp when_taken = 4;
    google.protobuf.Timestamp when_due = 5;
}
